fix the sqs call from initial lambda

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.613.0",
     "@aws-sdk/client-sfn": "^3.613.0",
+    "@aws-sdk/client-sqs": "^3.613.0",
     "@aws-sdk/lib-dynamodb": "^3.613.0",
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.0.0",
