--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/lib-dynamodb": "^3.613.0",
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21",
     "uuid": "^10.0.0"
   }
