--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21",
     "uuid": "^10.0.0"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
