--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.1",
   "contributors": [
     {
-      "name": "SergiyShegeda",
+      "name": "Sergiy Shegeda",
       "email": "sergiy.shegeda@gmail.com"
+    },
+    {
+      "name": "Vlad Khyzhnii",
+      "email": "vladbbk@gmail.com"
+    }
   ],
   "bin": {
     "public": "bin/tws-ev.ts"
