the logic of the black and white list was changed

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,12 @@ FACEBOOK_CLIENT_ID=my-facebook-client-id
 
 # Facebook OAuth Client Secret for enabling Facebook login in Cognito User Pool.
 FACEBOOK_CLIENT_SECRET=my-facebook-client-secret
+
+# A list of e-mail domains that go into the blacklist regardless of the validation result
+BANNED_EMAIL_DOMAINS=domain1.com,domain2.com
+
+# A list of e-mail domains that go into the whitelist regardless of the validation result
+APPROVED_EMAIL_DOMAINS=domain3.com,domain4.com
+
+# A list of email domains that will be rehabilitated upon re-verification
+REHABILITATED_EMAIL_DOMAINS=domain5.com
